src/objects/Assumption__c.object
<CustomObject>
    <fields>
        <fullName>Assumption__c</fullName>
        <label>Assumption</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanElement__c</fullName>
        <label>Plan Element</label>
        <picklist>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliverables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resilience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stakeholders</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Assumptions</relationshipLabel>
        <relationshipName>Assumptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Assumption</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Assumption Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assumptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>